--- a/deploy/dev.yaml
+++ b/deploy/dev.yaml
@@ -69,6 +69,20 @@ Resources:
         IgnorePublicAcls: false
         RestrictPublicBuckets: false
 
+  GeneratedImagesBucketPolicy:
+    Type: AWS::S3::BucketPolicy
+    Properties:
+      Bucket: !Ref GeneratedImagesBucket
+      PolicyDocument:
+        Version: "2012-10-17"
+        Statement:
+          - Sid: PublicReadGetObject
+            Effect: Allow
+            Principal: "*"
+            Action:
+              - s3:GetObject
+            Resource: !Sub arn:aws:s3:::${GeneratedImagesBucket}/*
+
   # DynamoDB Table
   ConversationTable:
     Type: AWS::DynamoDB::Table
